CLVMWARE-94 - Fix in composer.json and README.md fix

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name":"LeaseWeb/vmwarephp",
+    "name":"leaseweb/vmware-php-sdk",
     "type":"library",
     "description":"Vmware vSphere bindings for PHP",
     "keywords":["vmware", "php", "vsphere", "bindings", "vsphere sdk", "vmware php"],
